--- a/shared-contexts/envs/gnn_dev.yaml
+++ b/shared-contexts/envs/gnn_dev.yaml
@@ -3,12 +3,13 @@ channels:
   - rapidsai
   - nvidia
   - conda-forge
+  - dglteam
 dependencies:
   - cmake>=3.20
   - clang=11.1.0
   - clang-tools=11.1.0
-  - compilers
-  - cudatoolkit=11.5
+  - compilers=1.3.0
+  - cudatoolkit=11.3
   - cudnn=8.2
   - doxygen=1.8.20
   - flake8
@@ -18,8 +19,10 @@ dependencies:
   - numpy>=1.17
   - pandas
   - pytest>=4.6
-  - python>=3
+  - python==3.9
   - scikit-learn>=0.21
   - sysroot_linux-64=2.17
   - unzip
   - wget
+  - dgl-cuda11.3
+  - pip
