--- a/shared-contexts/envs/gnn_dev.yaml
+++ b/shared-contexts/envs/gnn_dev.yaml
@@ -2,15 +2,19 @@ name: gnn_dev
 channels:
   - rapidsai
   - nvidia
+  - rapidsai-nightly
   - conda-forge
-  - dglteam
+  - pytorch
 dependencies:
-  - cmake>=3.20
+# use cmake 3.20 as this will ask nvcc to provide correct headers
+  - cmake>=3.20,!=3.23.0
+  - compilers
   - clang=11.1.0
   - clang-tools=11.1.0
-  - compilers=1.3.0
-  - cudatoolkit=11.3
+  - cudatoolkit=11.5
+  - cuda-python>=11.5,<12.0
   - cudnn=8.2
+  - cython>=0.29,<0.30
   - doxygen=1.8.20
   - flake8
   - jupyter
@@ -19,10 +23,10 @@ dependencies:
   - numpy>=1.17
   - pandas
   - pytest>=4.6
-  - python==3.9
+  - python>=3
+  - pytorch=1.11
   - scikit-learn>=0.21
+# needed since cudnn requires sysroot/glibc >= 2.14
   - sysroot_linux-64=2.17
   - unzip
   - wget
-  - dgl-cuda11.3
-  - pip
